Fix for Bug 1285647 and issue 6025  - Border width will be expanded when long value added in Environment Variables for project  - Route link on overview is truncated even at wide browser widths

--- a/assets/app/styles/_core.less
+++ b/assets/app/styles/_core.less
@@ -528,8 +528,8 @@ label.checkbox {
     margin: 0;
     width: 44%;
   }
-  .key {
-    margin-left: 2px;
+  .value {
+    max-width: 500px; // enable firefox to truncate
   }
   .btn {
     vertical-align: top;
